[gd_scene load_steps=2 format=3 uid="uid://ejriwuwche6d"]

[ext_resource type="Script" path="res://scripts/ui/level_up_menu.gd" id="1_menu"]

[node name="LevelUpMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_menu")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option1" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Option 1"

[node name="Option2" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Option 2"

[node name="Option3" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Option 3"
